--- a/pecl/.gitignore
+++ b/pecl/.gitignore
@@ -1,3 +1,26 @@
+### /Users/rsk/.gitignore-boilerplates/Global/Linux.gitignore
+
+.*
+!.gitignore
+*~
+
+
+### /Users/rsk/.gitignore-boilerplates/Global/OSX.gitignore
+
+.DS_Store
+.AppleDouble
+.LSOverride
+Icon
+
+
+# Thumbnails
+._*
+
+# Files that might appear on external disk
+.Spotlight-V100
+.Trashes
+
+
 ### /Users/rsk/.gitignore-boilerplates/C.gitignore
 
 # Object files
@@ -19,3 +42,42 @@
 *.app
 
 
+### /Users/rsk/.gitignore-boilerplates/C++.gitignore
+
+# Compiled Object files
+*.slo
+*.lo
+*.o
+
+# Compiled Dynamic libraries
+*.so
+*.dylib
+
+# Compiled Static libraries
+*.lai
+*.la
+*.a
+
+
+### PECL
+
+.deps
+.libs/
+Makefile*
+acinclude.m4
+aclocal.m4
+autom4te.cache/
+build/
+config.*
+configure*
+install-sh
+libtool
+ltmain.sh
+missing
+mkinstalldirs
+php_test_results_*.txt
+run-tests.php
+tests/*.diff
+tests/*.out
+tests/*.php
+!config.m4
